[package]
name = "blind_auctions"
version = "0.1.0"
description = "Created with Arcium & Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "blind_auctions"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
bytemuck = { version = "1", features = ["derive", "min_const_generics"] }
arcium-client = { default-features = false, version = "=0.9.7" }
arcium-macros = "=0.9.7"
arcium-anchor = "=0.9.7"
# pin so that we do not have 1.13.*
unicode-segmentation = { version = "=1.12.0"}
# pin to avoid edition2024 which cargo build-sbf's bundled Rust 1.84 cannot parse
indexmap = "=2.7.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
